--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body style="background-color:aqua "></body>
-    
+<h1>Jesse Spence</h1>  
+<h2>I am a full stack developer</h2>  
+<P>git push -u origin main</P>
 </body>
 </html>
