--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body style="background-color:aqua "></body>
 <h1>Jesse Spence</h1>  
 <h2>I am a full stack developer</h2>  
-<P>git push -u origin main</P>
+<P><I help designers, Small agencies and businesses bring their ideas to life. I turn your requirements into fully functional, user friendly websites, on TIME and on BUDGET/P>
 </body>
 </html>
