--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color:aqua "></body>
-<h1>Jesse Spence</h1>  
-<h2>I am a full stack developer</h2>  
-<P><I help designers, Small agencies and businesses bring their ideas to life. I turn your requirements into fully functional, user friendly websites, on TIME and on BUDGET/P>
+<body style="background-color:aqua ">
+
+    <h1>Jesse Spence</h1>  
+    <h2>I am a full stack developer</h2>  
+    <P>I help designers, Small agencies and businesses bring their ideas to life. I turn your requirements into fully functional, user friendly websites, on TIME and on BUDGET.</P>
+     <img src="matt-artz-nTRDnDdDYk8-unsplash.jpg" alt="digital world" style="max-width: 100%; max-height: 50vh; ">
+    <table style="width: 100%;text-align: center;border: 2px solid">
+        <tr>
+            <td>Col 1</td>
+            <td>Col 2</td>
+        </tr>
+        <tr>
+            <td>value 1</td>
+            <td>value 2</td>
+        </tr>
+    </table>
 </body>
+
 </html>
